# macroForApplications

./: CMakeLists.txt  TranslationUtils.cmake  hotkeylineedit.cpp  hotkeylineedit.h  keyappopener.cpp  keyappopener.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
include/: createmacrodialog.h
resources/: resources.qrc
src/: addcombinationfragment.cpp  addcombinationfragment.h  basefragment.h  basescreensfactory.h  centralwindow.cpp  centralwindow.h  createmacrodialog.cpp  createmacrodialog.h  entrywidget.cpp  entrywidget.h  globalhotkeymanager.cpp  globalhotkeymanager.h  jsonarraymanipulations.cpp  jsonarraymanipulations.h  keylineedit.cpp  keylineedit.h  mainfragment.cpp  mainfragment.h  mainwindow.cpp  mainwindow.h  navigator.cpp  navigator.h  programmanager.cpp  programmanager.h  screens.h  screensfactory.h  settingsfragment.cpp  settingsfragment.h  shortcutmanager.cpp  shortcutmanager.h  windowsglobalhotkeymanager.cpp  windowsglobalhotkeymanager.h  windowsprogrammanager.cpp  windowsprogrammanager.h
